Сделать верстку мобильной версии сайта согласно отрисованному варианту в фигме

--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -190,15 +190,15 @@
                 {{ search }}
             </div>
 
-            <div class="col-sm-3 col-xs-12 text-right orderCurrency">
+            <div class="col-sm-6 col-md-3 col-xs-12 text-right orderCurrency">
                 <div class="today__currency">{{ today_currency }}</div>
             </div>
             <div class="col-sm-3 hidden-xs hidden-sm">
                 <!--<a class="btn btn-primary btn-block" href="{{ login }}">Вход | Регистрация</a>-->
-                <div class="col-sm-5">
+                <div class="col-sm-5" style="padding-left: 0">
                     <a class="agree btn btn-primary btn-block" href="index.php?route=common/popups/contact">Контакты</a>
                 </div>
-                <div class="col-sm-7">
+                <div class="col-sm-7" style="padding-left: 0; padding-right: 0">
                     <a class="agree btn btn-primary btn-block" href="index.php?route=common/popups">Заказать звонок</a>
                 </div>
             </div>
