Убрать вывод в карточке title, название товара сделать h1

--- a/catalog/view/theme/default/template/common/popups_contact.twig
+++ b/catalog/view/theme/default/template/common/popups_contact.twig
@@ -2,7 +2,7 @@
     <div class="col-sm-12">
         <div style="" id="show-company-contact">
             {% for contact in contacts %}
-                {% if contact.name|trim in ['Отдел продаж:', 'Электронная почта:'] %}
+                {% if contact.name|trim in ['Отдел продаж:', 'Отдел сервиса:', 'Электронная почта:'] %}
                     <b>{{ contact.name }} </b>{{ contact.value }}<br>
                 {% endif %}
             {% endfor %}
